--- a/src/ui/register/register.css
+++ b/src/ui/register/register.css
@@ -1,6 +1,7 @@
 html, body {
     background-color: #92CACE;
-    height: 100%;
+   
+    
 }
 
 .register_line {
@@ -33,11 +34,11 @@ html, body {
 }
 
 .welcome_container {
-    background-image: url("img/fondo.png");
+    background-image: url("../img/fondo.png");
     background-size: cover;
     width: 46%;
     height: 70vh;
-    margin-top: 6%;
+    margin-top: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,7 +57,7 @@ html, body {
     background-color: aliceblue;
     width: 46%;
     height: 70vh;
-    margin-top: 6%; 
+    margin-top: 5%; 
 }
 
 .footer_container {
@@ -67,4 +68,5 @@ html, body {
     bottom: 0;
     width: 100%;
     height: 3rem;
+    left: 0;
 }
