--- a/src/ui/register/register.css
+++ b/src/ui/register/register.css
@@ -2,23 +2,37 @@ html, body {
     background-color: #92CACE;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    width: 46%;
+    height: 70vh;
+    margin-top: 5%; 
+}
+
 label {
     color: #1A2C32;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: inter;
     font-style: italic;
     font-weight: bold;
-    padding-left: 10rem;
     margin: 1rem;
+    width: 50%;
+    padding-left: 9rem;
 }
 
 input {
     background-color: #DDEFF0;
-    margin-left: 10rem;
-    width: 45%;
+    width: 15rem;
     height: 2rem;
     border-radius: 0.5rem;
     border-style: none;
+    margin-left: 10rem;
+    padding-left: 1rem;
+}
+
+input::placeholder {
+    opacity: 75%;
 }
 
 button[for="register"] {
@@ -26,10 +40,10 @@ button[for="register"] {
     color: #FFFFFF;
     border-style: none;
     border-radius: 1.5rem;
-    width: 20%;
+    width: 25%;
     height: 2.5rem;
     margin-top: auto;
-    margin-left: 15rem;
+    margin-left: 14rem;
     font-size: 24px;
     font-family: inter;
     transition: background-color 0.3s ease, transform 0.3s ease;
@@ -103,14 +117,6 @@ input[type="password"] {
     font-family: inter;
     font-style: italic;
     font-weight: bold;
-}
-
-.form_container {
-    display: flex;
-    flex-direction: column;
-    width: 46%;
-    height: 70vh;
-    margin-top: 5%; 
 }
 
 .footer_container {
