--- a/src/ui/register/register.css
+++ b/src/ui/register/register.css
@@ -60,6 +60,31 @@ button[for="register"]:active {
     transform: scale(0.95); 
 }
 
+.back-button {
+    background-color: #5FAAB1;
+    border: none;
+    font-size: 1.5rem;
+    font-family: inter;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+    position: fixed;
+    top: 1rem;
+    left: 1rem;
+    border-radius: 1.5rem;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #4b8f95; 
+    transform: scale(1.05); 
+}
+
+.back-button:active {
+    background-color: #3a7d82; 
+    transform: scale(0.95); 
+}
+
 input[type="text"] {
     font-size: 15px;
     font-family: inter;
@@ -96,18 +121,20 @@ input[type="password"] {
 
 .flex_container {
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
+    align-items: center;
 }
 
 .welcome_container {
     background-image: url("../img/fondo.png");
-    background-size: cover;
+    background-size: contain;
     width: 46%;
     height: 70vh;
-    margin-top: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 5%;
 }
 
 .welcome_text {
@@ -128,23 +155,4 @@ input[type="password"] {
     width: 100%;
     height: 3rem;
     left: 0;
-}
-
-/* estilos para la flecha de volver atras */
-.back-button {
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    color: #1A2C32;
-    cursor: pointer;
-    margin: 1rem;
-    padding-left: 1rem;
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    font-family: inter;
-}
-
-.back-button:hover {
-    color: #4b8f95; /* Cambiar color al hacer hover */
 }
