--- a/src/ui/home/home.css
+++ b/src/ui/home/home.css
@@ -22,11 +22,11 @@ body {
     flex-direction: column;
     align-items: center;
     background-color: transparent;
-    padding: 20px;
+    padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     height: 100vh;
-    width: 30%;
+    width: 33%;
 }
 
 .subject-container, .task-container {
@@ -36,7 +36,7 @@ body {
     border-radius: 0.5rem;
 }
 
-.name-colum {
+.name-colum-subject {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -65,7 +65,7 @@ p[for="subject1"] {
 }
 
 p[for="schedule"] {
-    margin-right: 3.5rem;
+    margin-right: 5rem;
 }
 
 .subject-info {
@@ -148,14 +148,80 @@ h2 {
     height: 10vh;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
+.name-colum-task {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.5rem;
 }
 
-table th, table td {
-    width: 100%;
+.title-task {
+    margin-left: 1rem;
+}
+
+.filter-task {
+    margin-right: 1rem;
+}
+
+table { 
+    font-size: 0.7rem;
+    font-weight: bold;
+    border-collapse: separate; 
+    border-spacing: 0 1rem;
+}
+table tr {
+    padding: 1rem;
+}
+
+table td {
+    background-color: #92CACE;
+    padding: 0.4rem; 
+    text-align: center; 
+    color: #ffff;
+    padding: 0.5rem;
+}
+table input[type="checkbox"] {
+    cursor: pointer;
+    width: 1.5rem;
+    height: 1.5rem; 
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid #333;
+    border-radius: 3px;
+}
+
+table input[type="checkbox"]:checked {
+    background-color: #5FAAB1; 
+    border: 2px solid #5FAAB1;
+}
+
+table input[type="checkbox"]:checked::after {
+    content: "✔";
+    color: white; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    font-size: 1rem; 
+}
+
+.edit-btn {
+    background-color: transparent;
+    margin-top: 0;
+    transition: transform 0.3s ease;
+}
+
+.edit-btn:hover {
+    transform: scale(1.1);
+}
+
+.edit-btn img {
+    background-color: transparent;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: none;
+    cursor: pointer;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 button {
