--- a/src/ui/home/home.css
+++ b/src/ui/home/home.css
@@ -10,6 +10,62 @@ body {
     color: #333;
 }
 
+.sidebar_menu {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    overflow-x: hidden;
+    transition: width 0.5s;
+    padding-top: 60px;
+    transition: width 0.5s;
+}
+
+.sidebar_menu.open {
+    width: 250px;
+}
+
+.sidebar_menu a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar_menu a:hover {
+    background-color: #575757;
+}
+
+.sidebar_menu .close-btn-sidebar {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 36px;
+    color: #fff;
+}
+
+.close-btn-sidebar {
+    width: 50%;
+    height: 10vh;
+}
+
+.menu-btn {
+    font-size: 30px;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.menu-btn:hover {
+    background-color: #005f73;
+}
+
 .container {
     display: flex;
     justify-content: space-around;
@@ -70,10 +126,39 @@ body {
     width: 100%;
     height: 22.2vh;
     border-radius: 0.5rem;
+}
+
+.completed-title {
+    background-color: #DDEFF0;
+    width: 100%;
+    height: 2vh;
+    border-radius: 0.5rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    padding: 0.5rem;
+    padding: 1rem;
+}
+
+.task-completed {
+    background-color: #5FAAB1;
+    display: flex;
+    height: 5vh;
+    width: 90%;
+    margin: 1rem;
+    border-radius: 0.5rem;
+    justify-content: space-between;
+}
+
+.task-completed-example {
+    color: #DDEFF0;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    margin-left: 0.5rem;
+}
+
+.drop_down_img {
+    cursor: pointer;
 }
 
 .name-colum-subject {
