--- a/src/ui/home/home.css
+++ b/src/ui/home/home.css
@@ -79,7 +79,7 @@ body {
     width: 80%;
 }
 
-.modal {
+.modal, .modal-edit-subject {
     display: none; 
     position: fixed; 
     z-index: 1; 
@@ -111,9 +111,21 @@ body {
     background-color: #fefefe;  
     padding: 20px;  
     border: 1px solid #888; 
-    width: 80%; 
+    width: 50%; 
     border-radius: 8px; 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); 
+}
+
+.modal-edit-subject.show {
+    display: flex;
+}
+
+.modal-edit-subject-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    border-radius: 10px;
+    width: 50%; /* Ancho del modal */
 }
 
 .container {
@@ -129,7 +141,6 @@ body {
     background-color: transparent;
     padding: 1rem;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     height: 100vh;
     width: 33%;
 }
@@ -139,6 +150,7 @@ body {
     width: 100%;
     height: 70vh;
     border-radius: 0.5rem;
+    overflow-y: auto;
 }
 
 .details-container {
@@ -506,7 +518,7 @@ table input[type="checkbox"]:checked::after {
 #addSubjectForm button {
     padding: 10px; 
     border: 1px solid #B2DFDB; 
-    border-radius: 4px; 
+    border-radius: 1rem; 
     font-size: 1rem; 
 }
 
@@ -519,19 +531,73 @@ table input[type="checkbox"]:checked::after {
 }
 
 #addSubjectForm button {
-    background-color: #00796B; 
+    background-color: #5FAAB1; 
     color: #FFFFFF; 
     border: none; 
     cursor: pointer; 
-    transition: background-color 0.3s ease; 
+    width: 50%;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    align-items: center;
+    margin-left: 10rem;
 }
 
 #addSubjectForm button:hover {
-    background-color: #004D40; 
+    background-color: #4A9197; 
+    transform: scale(1.05); 
 }
 
-#addSubjectForm input[name="subjectDateEnd"] {
+#addSubjectForm button:active {
+    background-color: #3B7B80; 
+    transform: scale(0.98); 
+}
+
+#editSubjectForm {
+    display: flex;
+    flex-direction: column; 
+    gap: 15px; 
+}
+
+#editSubjectForm label {
+    font-weight: bold; 
+    color: #333; 
+}
+
+#editSubjectForm input[type="text"],
+#editSubjectForm input[type="date"],
+#editSubjectForm button {
+    padding: 10px; 
+    border: 1px solid #B2DFDB; 
+    border-radius: 1rem; 
+    font-size: 1rem; 
+}
+
+#editSubjectForm input[type="text"] {
     width: 100%; 
+}
+
+#editSubjectForm input[type="date"] {
+    width: 100%; 
+}
+
+#editSubjectForm button {
+    background-color: #5FAAB1; 
+    color: #FFFFFF; 
+    border: none; 
+    cursor: pointer; 
+    width: 50%;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+    align-items: center;
+    margin-left: 10rem;
+}
+
+#editSubjectForm button:hover {
+    background-color: #4A9197; 
+    transform: scale(1.05); 
+}
+
+#editSubjectForm button:active {
+    background-color: #3B7B80; 
+    transform: scale(0.98); 
 }
 
 .modal-task {  
